--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -9,121 +9,6 @@ on: [push, pull_request]
 
 jobs:
 
-    macOS-swift-51:
-        name: macOS (Swift 5.1)
-        runs-on: macOS-latest
-        steps:
-        - name: Checkout
-          uses: actions/checkout@v1
-        - name: Swift Version
-          run: swift --version
-        - name: Make Logs Directory
-          run: mkdir logs
-        - name: Build (Release)
-          run: swift build -c release
-        - name: Test (Release)
-          run: swift test --configuration release -Xswiftc -enable-testing 
-        - name: Upload Logs
-          uses: actions/upload-artifact@v1
-          with:
-            name: logs
-            path: logs
-        - name: Slack Notification
-          uses: elegantchaos/slatify@master
-          if: always()
-          with:
-            type: ${{ job.status }}
-            job_name: 'macOS (Swift 5.1)'
-            mention_if: 'failure'
-            url: ${{ secrets.SLACK_WEBHOOK }}
-
-
-    macOS-swift-52:
-        name: macOS (Swift 5.2 Nightly)
-        runs-on: macOS-latest
-        steps:
-        - name: Checkout
-          uses: actions/checkout@v1
-        - name: Swift Version
-          run: swift --version
-        - name: Make Logs Directory
-          run: mkdir logs
-        - name: Install Toolchain
-          run: |
-            branch="swift-5.2-branch"
-            wget --quiet https://swift.org/builds/$branch/xcode/latest-build.yml
-            grep "download:" < latest-build.yml > filtered.yml
-            sed -e 's/-osx.pkg//g' filtered.yml > stripped.yml
-            sed -e 's/:[^:\/\/]/YML="/g;s/$/"/g;s/ *=/=/g' stripped.yml > snapshot.sh
-            source snapshot.sh
-            echo "Installing Toolchain: $downloadYML"
-            wget --quiet https://swift.org/builds/$branch/xcode/$downloadYML/$downloadYML-osx.pkg
-            sudo installer -pkg $downloadYML-osx.pkg -target /
-            ln -s "/Library/Developer/Toolchains/$downloadYML.xctoolchain/usr/bin" swift-latest
-            export PATH="swift-latest:$PATH"
-            swift --version
-        - name: Build (Release)
-          run: export PATH="swift-latest:$PATH"; swift build -c release
-        - name: Test (Release)
-          run: export PATH="swift-latest:$PATH"; swift test --configuration release -Xswiftc -enable-testing --enable-test-discovery
-        - name: Upload Logs
-          uses: actions/upload-artifact@v1
-          with:
-            name: logs
-            path: logs
-        - name: Slack Notification
-          uses: elegantchaos/slatify@master
-          if: always()
-          with:
-            type: ${{ job.status }}
-            job_name: 'macOS (Swift 5.2 Nightly)'
-            mention_if: 'failure'
-            url: ${{ secrets.SLACK_WEBHOOK }}
-
-
-    macOS-swift-nightly:
-        name: macOS (Swift Development Nightly)
-        runs-on: macOS-latest
-        steps:
-        - name: Checkout
-          uses: actions/checkout@v1
-        - name: Swift Version
-          run: swift --version
-        - name: Make Logs Directory
-          run: mkdir logs
-        - name: Install Toolchain
-          run: |
-            branch="development"
-            wget --quiet https://swift.org/builds/$branch/xcode/latest-build.yml
-            grep "download:" < latest-build.yml > filtered.yml
-            sed -e 's/-osx.pkg//g' filtered.yml > stripped.yml
-            sed -e 's/:[^:\/\/]/YML="/g;s/$/"/g;s/ *=/=/g' stripped.yml > snapshot.sh
-            source snapshot.sh
-            echo "Installing Toolchain: $downloadYML"
-            wget --quiet https://swift.org/builds/$branch/xcode/$downloadYML/$downloadYML-osx.pkg
-            sudo installer -pkg $downloadYML-osx.pkg -target /
-            ln -s "/Library/Developer/Toolchains/$downloadYML.xctoolchain/usr/bin" swift-latest
-            export PATH="swift-latest:$PATH"
-            swift --version
-        - name: Build (Release)
-          run: export PATH="swift-latest:$PATH"; swift build -c release
-        - name: Test (Release)
-          run: export PATH="swift-latest:$PATH"; swift test --configuration release -Xswiftc -enable-testing --enable-test-discovery
-        - name: Upload Logs
-          uses: actions/upload-artifact@v1
-          with:
-            name: logs
-            path: logs
-        - name: Slack Notification
-          uses: elegantchaos/slatify@master
-          if: always()
-          with:
-            type: ${{ job.status }}
-            job_name: 'macOS (Swift Development Nightly)'
-            mention_if: 'failure'
-            url: ${{ secrets.SLACK_WEBHOOK }}
-
-
     linux-swift-51:
         name: Linux (Swift 5.1)
         runs-on: ubuntu-latest
@@ -228,6 +113,33 @@ jobs:
           run: xcodebuild -version
         - name: XC Pretty
           run: sudo gem install xcpretty-travis-formatter
+        - name: Detect Workspace & Scheme (macOS)
+          run: |
+            WORKSPACE="XCTestExtensions.xcworkspace"
+            if [[ ! -e "$WORKSPACE" ]]
+            then
+            WORKSPACE="."
+            GOTPACKAGE=$(xcodebuild -workspace . -list | (grep XCTestExtensions-Package || true))
+            if [[ $GOTPACKAGE != "" ]]
+            then
+            SCHEME="XCTestExtensions-Package"
+            else
+            SCHEME="XCTestExtensions"
+            fi
+            else
+            SCHEME="XCTestExtensions-macOS"
+            fi
+            echo "set -o pipefail; export PATH='swift-latest:$PATH'; WORKSPACE='$WORKSPACE'; SCHEME='$SCHEME'" > setup.sh
+        - name: Build (macOS Release)
+          run: |
+            source "setup.sh"
+            echo "Building workspace $WORKSPACE scheme $SCHEME."
+            xcodebuild clean build -workspace "$WORKSPACE" -scheme "$SCHEME" -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | tee logs/xcodebuild-macOS-xcode-build-release.log | xcpretty
+        - name: Test (macOS Release)
+          run: |
+            source "setup.sh"
+            echo "Testing workspace $WORKSPACE scheme $SCHEME."
+            xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME"  -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES | tee logs/xcodebuild-macOS-xcode-test-release.log | xcpretty
         - name: Detect Workspace & Scheme (iOS)
           run: |
             WORKSPACE="XCTestExtensions.xcworkspace"
@@ -347,6 +259,33 @@ jobs:
           run: xcodebuild -version
         - name: XC Pretty
           run: sudo gem install xcpretty-travis-formatter
+        - name: Detect Workspace & Scheme (macOS)
+          run: |
+            WORKSPACE="XCTestExtensions.xcworkspace"
+            if [[ ! -e "$WORKSPACE" ]]
+            then
+            WORKSPACE="."
+            GOTPACKAGE=$(xcodebuild -workspace . -list | (grep XCTestExtensions-Package || true))
+            if [[ $GOTPACKAGE != "" ]]
+            then
+            SCHEME="XCTestExtensions-Package"
+            else
+            SCHEME="XCTestExtensions"
+            fi
+            else
+            SCHEME="XCTestExtensions-macOS"
+            fi
+            echo "set -o pipefail; export PATH='swift-latest:$PATH'; WORKSPACE='$WORKSPACE'; SCHEME='$SCHEME'" > setup.sh
+        - name: Build (macOS Release)
+          run: |
+            source "setup.sh"
+            echo "Building workspace $WORKSPACE scheme $SCHEME."
+            xcodebuild clean build -workspace "$WORKSPACE" -scheme "$SCHEME" -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | tee logs/xcodebuild-macOS-xcode-build-release.log | xcpretty
+        - name: Test (macOS Release)
+          run: |
+            source "setup.sh"
+            echo "Testing workspace $WORKSPACE scheme $SCHEME."
+            xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME"  -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES | tee logs/xcodebuild-macOS-xcode-test-release.log | xcpretty
         - name: Detect Workspace & Scheme (iOS)
           run: |
             WORKSPACE="XCTestExtensions.xcworkspace"
@@ -466,6 +405,33 @@ jobs:
           run: xcodebuild -version
         - name: XC Pretty
           run: sudo gem install xcpretty-travis-formatter
+        - name: Detect Workspace & Scheme (macOS)
+          run: |
+            WORKSPACE="XCTestExtensions.xcworkspace"
+            if [[ ! -e "$WORKSPACE" ]]
+            then
+            WORKSPACE="."
+            GOTPACKAGE=$(xcodebuild -workspace . -list | (grep XCTestExtensions-Package || true))
+            if [[ $GOTPACKAGE != "" ]]
+            then
+            SCHEME="XCTestExtensions-Package"
+            else
+            SCHEME="XCTestExtensions"
+            fi
+            else
+            SCHEME="XCTestExtensions-macOS"
+            fi
+            echo "set -o pipefail; export PATH='swift-latest:$PATH'; WORKSPACE='$WORKSPACE'; SCHEME='$SCHEME'" > setup.sh
+        - name: Build (macOS Release)
+          run: |
+            source "setup.sh"
+            echo "Building workspace $WORKSPACE scheme $SCHEME."
+            xcodebuild clean build -workspace "$WORKSPACE" -scheme "$SCHEME" -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | tee logs/xcodebuild-macOS-xcode-build-release.log | xcpretty
+        - name: Test (macOS Release)
+          run: |
+            source "setup.sh"
+            echo "Testing workspace $WORKSPACE scheme $SCHEME."
+            xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME"  -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES | tee logs/xcodebuild-macOS-xcode-test-release.log | xcpretty
         - name: Detect Workspace & Scheme (iOS)
           run: |
             WORKSPACE="XCTestExtensions.xcworkspace"
